...
        }
        Column(verticalArrangement = Arrangement.SpaceBetween) {
            Row(
                horizontalArrangement = Arrangement.Center,
                verticalAlignment = Alignment.CenterVertically
            ) {
                TextButton(onClick = clickedFollower, modifier = Modifier.testTag("followersButton")) {
                    Text(
                        text = "$followerCount \n Followers",
                        color = Color.Black,
                        fontSize = 15.sp,
                        textAlign = TextAlign.Center,
                    )
                }
                TextButton(onClick = clickedFollowing, modifier = Modifier.testTag("followingButton")) {
                    Text(
                        text = "$followingCount \n Following",
                        color = Color.Black,
                        fontSize = 15.sp,
                        textAlign = TextAlign.Center,
                    )
...
