...
    onClick: () -> Unit = {  },
){
    Card(
        onClick = onClick,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("reviewLazyGridItem"),
    ) {
        Box(
            modifier = Modifier.size(150.dp),
        ) {
            Image(
                painter = rememberImagePainter(
...
